syntax = "proto3";

package monitor;
option go_package="./monitor";

message Request {
  string ping = 1;
}

message LoginInfoReq {
  string infoId = 11;
  string username = 1;
  string tenantId = 2;
  string clientKey = 3;
  string deviceType = 4;
  string ipaddr = 5;
  string LoginLocation = 6;
  string browser = 7;
  string os = 8;
  string status = 9;
  string msg = 10;
}

message OperLogReq {
    // 租户编号
    string tenantId = 2;
    // 模块标题
    string title = 3;
    // 业务类型（0其它 1新增 2修改 3删除）
    int32 businessType = 4;
    // 方法名称
    string method = 5;
    // 请求方式
    string requestMethod = 6;
    // 操作类别（0其它 1后台用户 2手机端用户）
    int32 operatorType = 7;
    // 操作人员
    string operName = 8;
    // 部门名称
    string deptName = 9;
    // 请求URL
    string operUrl = 10;
    // 主机地址
    string operIp = 11;
    // 操作地点
    string operLocation = 12;
    // 请求参数
    string operParam = 13;
    // 返回参数
    string jsonResult = 14;
    // 操作状态（0正常 1异常）
    int32 status = 15;
    // 错误消息
    string errorMsg = 16;
    // 消耗时间
    int64 costTime = 18;
}
message Response {
  string pong = 1;
}

message EmptyResp {

}

service LoginInfoRpc {
  rpc Save(LoginInfoReq) returns(EmptyResp);
}

service OperLogRpc {
  rpc Save(OperLogReq) returns(EmptyResp);
}